--- a/练习-JavaScript部分/手写防抖debounce.html
+++ b/练习-JavaScript部分/手写防抖debounce.html
@@ -12,22 +12,23 @@
     <span id="num">0</span>
     <script>
         // 防抖 - debounce 当持续触发事件时，一定时间段内没有再触发事件，事件处理函数才会执行一次，如果设定的时间到来之前，又一次触发了事件，就重新开始延时。
-        const debounce = function (fn, delay) {
-            let timer = null;
-            return () => {
-                clearTimeout(timer);
-                timer = setTimeout(fn, delay);
-            }
-        }
+        // const debounce = function (fn, delay) {
+        //     let timer = null;
+        //     return () => {
+        //         clearTimeout(timer);
+        //         timer = setTimeout(fn, delay);
+        //     }
+        // }
 
 
         var button = document.getElementById('button');
         var numSpan = document.getElementById('num');
         var num = 0;
+
         function handle() {
-            numSpan.innerText=++num;
+            numSpan.innerText = ++num;
         }
-        button.addEventListener('click',debounce(handle,1000));
+        button.addEventListener('click', debounce(handle, 1000));
     </script>
 </body>
 
